# ML-projects

AI-Chat-Essay-Evaluator-main/: BotStreamlit.py  pyproject.toml
Cyber-Risk-Protection-main/: README.md
E-Commerce-Rating-Classifier-main/: README.md  project.ipynb
